# 16745

Projecto/: .gitignore  HIGH_LEVEL_CONTROL_STRATEGY.md  README.md  README_PROJECT_SPEC.md  README_physics.md  codebase_overview.tex  pyproject.toml  pytest.ini  requirements-rl.txt  requirements.txt  run_dart_robot_demo_SPEC.py  run_sim.py
Projecto/artifacts_SPEC/: C3_control_robustness_sweep_SPEC.md  C4_accuracy_brownie_pack_SPEC.md  C5_deterministic_lockdown_SPEC.json  C5_deterministic_lockdown_SPEC.md  C6_uncertainty_calibration_99ci_SPEC.md  C7_spin_contact_confidence_SPEC.md  C8_stress_campaign_gate_SPEC.json  C8_stress_campaign_gate_SPEC.md  C9_pre_rl_handoff_SPEC.json  SPIN_contact_manipulation_summary_SPEC.md
Projecto/dart_robot_spec/: README_TRACK_MAPPING_CMU16745.md  SPEC_QUICK_REFERENCE_constants.py  __init__.py
Projecto/physics/: README_LEGACY_DEPRECATED.md  __init__.py  dartboard.py  projectile.py  state_estimator.py  target_solver.py  variance.py
Projecto/slides/: rl_dart_arm_outline.md  rl_dart_arm_slides.html
Projecto/spin_relevance_SPEC/: README.md  __init__.py  spin_ablation_SPEC.py
Projecto/tests/: __init__.py  conftest.py
Projecto/track_A_arm_SPEC/: A1_link_geometry_and_inertia_SPEC.py  A2_mujoco_mjcf_3link_arm_SPEC.xml  A2_mujoco_mjcf_3link_arm_TALL_SPEC.xml  A3_cubic_spline_and_pd_controller_SPEC.py  VALIDATION_A3_regression_suite_SPEC.py  VALIDATION_A4_workspace_release_speed_SPEC.py  __init__.py
Projecto/track_B_projectile_SPEC/: B1_point_mass_force_model_gravity_drag_wind_SPEC.py  B2_ode_integrator_event_board_plane_SPEC.py  (+3 more)
(+99 files in other folders)
